fixed issue with error messages not showing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -232,3 +232,7 @@ code {
 .delete {
   color:#ff7373;
 }
+
+.errors {
+  color:#ff7373;
+}
